# toolsearch

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  TODO.md
examples/: advanced_search.rs  basic_search.rs  complex_config.json  config_example.json  list_all_tools.rs  search_modes.rs  simple_usage.rs
src/: error.rs  lib.rs  main.rs  search.rs
tests/: advanced_test.rs  integration_test.rs
