[package]
name = "toolsearch-rs"
version = "0.1.0"
edition = "2024"
authors = ["Ying Kit WONG"]
description = "A Rust library for searching tools across MCP servers"
license = "Apache 2.0"
repository = "https://github.com/yingkitw/toolsearch-rs"

[lib]
name = "toolsearch_rs"
path = "src/lib.rs"

[[bin]]
name = "toolsearch"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.8", features = ["client"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
regex = "1.10"
tokio-util = { version = "0.7", features = ["time"] }

[dev-dependencies]
insta = "1.39"
tokio-test = "0.4"

